--- a/css/style.css
+++ b/css/style.css
@@ -14,23 +14,21 @@ a {
   text-decoration:none;
 }
  .data-section {
-  display: flex;
-  justify-content: space-around;
   position: relative;
-  padding: 115px 57px 112px 41px; 
-  width: 800px;
+  display: flex;
+  justify-content: space-around;  
   margin: 50px auto;
-  text-shadow: #8d8d8d 0 0 1px; 
-  color: #2b2b2b;
+  padding: 115px 55px 110px 40px; 
+  width: 800px;   
   background-color: #f4f4f4;   
  }
 
  .data-section:before {
-  display: block;
-  content: url('../img/bg-form.svg');
   position: absolute;
+  display: block;   
   top: 15px;
-  right: 0;   
+  right: 0;
+  content: url('../img/bg-form.svg');  
 }
 
 .contacts {  
@@ -42,11 +40,11 @@ a {
 }
 
 .contacts__header { 
-  margin-top: 41px;
+  margin-top: 40px;
   margin-bottom: 0;  
   line-height: 2.4rem; 
   font-size: 1.75rem;
-  font-weight: 400;    
+  font-weight: 400;      
 }
 
 .contacts__header-decoration {
@@ -54,7 +52,7 @@ a {
 }
 
 .contacts__header-desc {
-  margin-top: 7px;
+  margin-top: 5px;
   padding-right: 40px;
 }
 
@@ -65,14 +63,14 @@ a {
 
 .contacts__phone {
   display: inline-block;
-  margin-top: 11px;
+  margin-top: 10px;
   margin-bottom: 7px;
   font-size: 1.25rem;
   border-bottom: 2px solid #F5A623;
 }
 
 .contacts__phone:last-of-type {
- margin-top: 0;
+  margin-top: 0;
 }
 
 .social {
@@ -91,29 +89,30 @@ a {
 }
 
 .authorization {
+  position: relative;
   z-index: 77;
   width: 270px;
-  margin-top: 8px;
-  margin-bottom: 18px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   font-weight: 400;
   font-size: 0.7rem;
   background-color: #fff; 
+  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1);  
 }
 
 .authorization__content{
-  padding: 13px 25px 20px;  
-  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1);
+  padding: 15px 25px 20px;   
 }
 
 .authorization__head { 
-  margin-bottom: 12px;
+  margin-bottom: 10px;
   font-size: 1.5rem; 
 }
 
 .form__input-name,
 .form__input-password {  
-  width: 221px;
-  margin-top: 11px;
+  width: 220px;
+  margin-top: 10px;
   padding: 13px 0 13px 10px;  
   background-color: rgba(224, 224, 224, 0.35);
   border: none;  
@@ -121,11 +120,15 @@ a {
 
 .authorization__forgot {
   display: inline-block;
-  margin-top: 8px;
+  margin-top: 10px;
   margin-left: 115px; 
   text-shadow: #dd3c39 0 0 1px;  
   color: #dd3c39;
   cursor: pointer;
+}
+
+.authorization__forgot-back {
+  margin-left: 110px;
 }
 
 .authorization__forgot:after {
@@ -136,9 +139,9 @@ a {
   background-color:#dd3c39;  
 }
 .authorization__forgot:focus {
-  border: 1px solid #f80904;
+  border: 1px solid #F5A623;
 }
-.forgot-hidden {
+.radio-hidden {
   display: none;
 }
 
@@ -150,27 +153,85 @@ a {
   display: block;
   width: 221px;
   height: 40px;
-  margin-top: 16px;  
+  margin-top: 16px; 
+  padding-top: 14px;
+  text-align: center;
   border-radius: 5px;
   border: none;
   outline: none;
   color: #ffffff;
   background-color: #dd3c39; 
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 .authorization__btn:hover {
-  background-color: #f3504d
+  background-color: #f3504d;
+  transition: all 1s ease-out;
 }
-.authorization__btn:focus {
-  background-color: #fd0202
+.authorization__btn:active {
+  background-color: #F5A623
 }
 
+/* анимация */
 
+.flip {
+  position: relative; 
+  transform-style: preserve-3d;   
+}
 
+.flip-face {
+  position: absolute; 
+  top: 0;
+  bottom: 0;
+}
+.flip-face.back {  
+  transform: rotateY(180deg);  
+  backface-visibility: hidden; 
+  background-color: #fff;   
+}
 
+#radio_btn:checked  + .data-section > .authorization   {  
+  animation: zoom  1.5s cubic-bezier(0.1,0.25,0.1,1) 0s  alternate forwards;   
+}
+
+#radio_btn-back:checked  ~ .data-section > .authorization  {
+  animation: zoom-back  1.5s cubic-bezier(0.1,0.25,0.1,1) 0s  alternate forwards;  
+}
+
+#radio_btn:checked + .data-section:before {
+  animation: bouncing 1.5s cubic-bezier(0.1,0.25,0.1,1) 0s  alternate forwards; 
+}
+#radio_btn-back:checked ~ .data-section:before {  
+  animation: bouncing-back 1.5s cubic-bezier(0.1,0.25,0.1,1) 0s  alternate forwards; 
+}
+
+@keyframes zoom{
+  10% {transform: scale(1.1) }      
+  100% {transform: rotateY(180deg)}  
+}
+
+@keyframes zoom-back{
+  0% {transform: rotateY(180deg) }  
+  50% {transform: scale(1.1) }
+  100% {transform: scale(1) }  
+}
+
+@keyframes bouncing {
+  0%  {transform: scale(1) }
+  60% {transform: scale(0.4) }
+  100% { transform: scale(1) }
+}
+
+@keyframes bouncing-back {
+  0%  {transform: scale(1) }
+  50% {transform: scale(0.4) }
+  100% { transform: scale(1) }
+} 
+
+/*responseve*/
 
 @media only screen and (max-width : 480px) {
+
   .data-section {
     width: 100vw;
     display: block;
@@ -185,20 +246,23 @@ a {
 
   .contacts,
   .authorization {
-    width: 100vw;
+    width: 100vw;    
     padding: 0 50px;
+  }
+  .contacts {
+    overflow: hidden;
   }
 
   .contacts {
     padding-top: 15px;
   }
+
   .contacts__header {
     margin-top: 10px;
   }
 
   .contacts__header-desc {    
-    padding: 0 25px;
-    
+    padding: 0 25px;    
   }
 
   .authorization__content {
@@ -208,5 +272,13 @@ a {
 
   .social {
     margin: 10px auto;
+  }
+
+  .authorization__btn {
+    margin-bottom: 35px;    
+  }
+
+  #radio_btn:checked  + .data-section > .authorization {
+    animation: none;
   }
 }
